--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1132,10 +1132,13 @@ I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formu
 
 Da vores pegeopgaver er en reproducering af tidligere udførte forsøg i \cite{goldberg2015}, så vil vi sammenligne vores resultater med deres. Vi fandt, i vores analyse, at Meyer's formulering var den, som tilpassede vores data bedst, ved alle testdeltageres pegeopgaver. \cite{goldberg2015} fandt frem til, at MacKenzie's formulering er den som generelt tilpasser deres data bedst. Vi har derfor ikke kunne reproducere resultaterne som de fandt frem til i \cite{goldberg2015}, på trods af, at vi har reproduceret deres pegeopgave. Der kan derfor stilles spørgsmålstegn ved rigtigheden af resultaterne i \cite{goldberg2015}.
 
+% Fart diskussion
+Teorien om én primære underbevægelse efterfulgt af korrigerende underbevægelser, er som tidligere beskrevet, bekræftet af vores data. Selvom fartprofilerne vist i figur \ref{fig:speed_distance_testperson_140}-\ref{fig_speed_time_testperson_248} ikke har de samme afrundede og tydeligt distinkte kurver som \ref{fig:CrossmanFitt}, så stemmer vores data overens med Crossman og Goodeve's forklaring i \cite{crossman1983}.
+
 % Diskussion af tunnel
 I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering, da den havde den mindste AIC-værdi, på hhv. $20549.61$ og $33.68$. Det var dog ikke entydigt hvilken af formuleringerne som tilpassede dataen bedst, da både Accot \& Zhai's, MacKenzie's og Fitts' formulering havde AIC-værdier, hvor forskellen var under to. Derfor kan vi kun sige at de alle tilpasser dataen lige godt. Ved AIC-værdierne for gennemsnitstiderne er forskellen i mellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. Vores analyse viste også at Welford's formulering var den som beskrev vores data dårligst, da den havde den højeste AIC-værdi og forskellen var lige under ni. Vi kan altså ikke helt udelukke Welford's formulering og kan heller ikke sige hvilken formulering som beskriver vores data bedst.
 
-På forhånd havde vi forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Dette er dog ikke entydigt tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Dette kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det er med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
+På forhånd havde vi forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Dette er dog ikke entydigt tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Dette kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i figur \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det er med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
 
 I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$, forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores datasæt, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier.
 
@@ -1144,7 +1147,7 @@ I forhold til Accot og Zhai så er der også stor forskel i vores modellers kons
 % Diskussion af spiral
 Modsat vores tunnelopgave analyse så viste spiralopgaverne store forskelle i mellem AIC-værdierne, vist i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean}. Accot og Zhai's formulering beskrev vores data bedst med AIC-værdier på $20225.67$ og $61.91$ for hhv. det fulde datasæt og gennemsnitstiderne. De indbyrdes 'placeringer' er ens for begge AIC-analyser, men ligesom for tunnelopgaverne så er der en væsentlig variation i forskellene. Vi vil dog tage udgangspunkt i AIC-analysen for det fulde datasæt, på baggrund af samme argument som for navigationsopgaverne.
 
-Alle forskellene i \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor konkludere, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage yderligere konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er formentligt ikke tilfældet for spiralopgaven.
+Alle forskellene i tabel \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor konkludere, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage yderligere konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er formentligt ikke tilfældet for spiralopgaven.
 
 I forhold til vores konstanter $a$ og $b$ og Accot og Zhai's, så er der igen en væsentlig forskel, de fik $a=115$ og $b=169$, imens vores værdier er på $a=2097.09$ og $b=553.25$. Det er svært at diskutere i yderlighed, hvad denne forskel betyder, da vi kun har brugt 4 spiralopgaver imens de brugte 16.
 
