--- a/latex/main.tex
+++ b/latex/main.tex
@@ -5,7 +5,7 @@ We present an analysis of a dataset acquired from an uncontrolled online user st
 
 \subsection*{\centering~Resumé}
 
-Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, bakket op af et ti-persons kontrolleret laboratorieeksperiment. Ved hjælp af Akaike Information Criterion (AIC) og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer dataen bedst. Ved at se på deltagernes fart, hastighed og navigationsbaner ser vi efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts 'lov, men finder ikke dette. Det findes også, at Meyers variation er bedst, med AIC-værdier i intervallet fra 34.64 til 1781.96 mindre end andre variationer.
+Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, bakket op af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyers variation giver det bedste resultat, med AIC-værdier i området fra 34.64 til 1781.96 mindre end andre varianter. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Med AIC finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af ​​de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts 'lov, finder vi ingen tegn på mønstre.
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
