--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,11 +1,11 @@
 \input{preface.tex}
 
 \subsection*{\centering~Abstract}
-We present an analysis of a dataset acquired from an uncontrolled online user study including 264 participants, backed up by a controlled lab study consisting of ten test subjects. The dataset consists of data from three different tasks; a pointing task and two different navigation tasks, a tunnel and a spiral task. Using Akaike Information Criterion (AIC), and residual analysis, we compare four variations of Fitts' Law to see which is the best fit for the pointing tasks. It is found that Meyer's variation gives the best fit, with AIC-values ranging from 34.64 to 1781.96 less than other variations. We include a fifth variation of Fitts' Law adjusted specifically for the navigation tasks by Accot \& Zhai. Using AIC we find that no variation describes our tunnel task best, while Accot \& Zhai describes our spiral task better than any of the other variations. Looking at the participants speed, velocity and navigational paths we look for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing.
+We present an analysis of a dataset acquired from an uncontrolled online user study including 264 participants, backed up by a controlled lab study consisting of ten test subjects. The dataset consists of data from three different tasks; a pointing task and two different navigation tasks, a tunnel and a spiral task. Using Akaike Information Criterion (AIC), and residual analysis, we compare four variations of Fitts' Law to see which is the best fit for the pointing tasks. It is found that Meyer's variation gives the best fit, with AIC-values ranging from 34.64 to 1781.96 less than other variations. We include a fifth variation of Fitts' Law adjusted specifically for the navigation tasks by Accot \& Zhai. Based upon an AIC-analysis we find that no variation describes our tunnel task best, while Accot \& Zhai describes our spiral task better than any of the other variations. Looking at the participants speed, velocity and navigational paths we look for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing.
 
 \subsection*{\centering~Resumé}
 
-Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, bakket op af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyers variation giver det bedste resultat, med AIC-værdier i området fra 34.64 til 1781.96 mindre end andre varianter. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Med AIC finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af ​​de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts 'lov, finder vi ingen tegn på mønstre.
+Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, understøttet af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyer's variation giver det bedste resultat, med en AIC-værdi i området fra 34.64 til 1781.96 mindre end de andre varianters. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Ved AIC-analyse finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af ​​de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts 'lov, finder vi ingen tegn på mønstre.
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
