--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1153,10 +1153,9 @@ I forhold til vores konstanter $a$ og $b$ og Accot og Zhai's, så er der igen en
 
 \addcontentsline{toc}{chapter}{Konklusion}
 \chapter*{Konklusion}
-Vi kan på baggrund af vores analyse og diskussion konkludere, at Meyers formulering beskriver vores pegeopgave og tunnelopgave data bedst, men at Accot og Zhai's formulering bedst beskriver vores spiraldata. Generelt er det dog små ændringer i datapunkterne der kan ændre på, hvilken af formuleringerne, der klarer sig bedst.
+Vi har redegjort for Fitts' lov og gennemgået tre alternative formuleringer af samme lov. Vi har på baggrund af et kontrolleret og ukontrolleret eksperiment reproduceret tidligere udførte forsøg og indsamlet data fra i alt 274 testdeltagere. Dataene har vi analyseret kvalitativt og kvantitativt, ved at kigge på grafer, tilpasse lineære modeller og sammenligne disse ved AIC- og residual-analyse. 
 
-Welfords formulering klarer sig overordnet set dårligst, hvilket skyldes, at vores opgaver ikke er svære nok til at udelade det additive led.
-
+Vi kan på baggrund af denne analyse konkludere, at Meyer's formulering beskriver vores data fra pegeopgaverne bedst, derudover konkludere vi, at formuleringerne beskriver vores tunnelopgave data lige godt og, at det derfor er indifferent, hvilken variation man bruger til vores data. Ydermere kan vi konkludere, at Accot og Zhai's formulering er bedst til at beskrive spiralopgave data. Til sidst kan vi konkludere, at Welford's formulering klarer sig dårligst i at beskrive alle vores tre forskellige typer opgaver.
 \addcontentsline{toc}{section}{Fremtidigt arbejde}
 \section*{Fremtidigt arbejde}
 Ved videre udarbejdelse af projektet, kunne det have været interessant at foretage en mere dybdegående analyse af hastighedsprofilerne. Ved at studere flere af testdeltagernes tilhørende vektorplots kunne der have været større grobund for at se en sammenhæng imellem dem og Fitts' lov. Endvidere ville vi gerne have haft mulighed for, at sammenligne testdeltagernes tider i forhold til flere af deres spørgeskemasvar, så som forskel på mænd og kvinder, højre eller venstre hånd og så videre.
