--- a/latex/main.tex
+++ b/latex/main.tex
@@ -5,7 +5,7 @@ We present an analysis of a dataset acquired from an uncontrolled online user st
 
 \subsection*{\centering~Resumé}
 
-Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, understøttet af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyer's variation giver det bedste resultat, med en AIC-værdi i området fra 34.64 til 1781.96 mindre end de andre varianters. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Ved AIC-analyse finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af ​​de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts' lov, finder vi ingen tegn på mønstre.
+Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, understøttet af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyer's variation giver det bedste resultat, med en AIC-værdi i området fra 34.64 til 1781.96 mindre end de andre varianters. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Ved AIC-analyse finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af ​de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts' lov, finder vi ingen tegn på mønstre.
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
