--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1155,7 +1155,7 @@ I forhold til vores konstanter $a$ og $b$ og Accot og Zhai's, så er der igen en
 \chapter*{Konklusion}
 Vi har redegjort for Fitts' lov og gennemgået tre alternative formuleringer af samme lov. Vi har på baggrund af et kontrolleret og ukontrolleret eksperiment reproduceret tidligere udførte forsøg og indsamlet data fra i alt 274 testdeltagere. Dataene har vi analyseret kvalitativt og kvantitativt, ved at kigge på grafer, tilpasse lineære modeller og sammenligne disse ved AIC- og residual-analyse. 
 
-Vi kan på baggrund af denne analyse konkludere, at Meyer's formulering beskriver vores data fra pegeopgaverne bedst, derudover konkluderer vi, at formuleringerne beskriver vores tunnelopgave data lige godt og, at det derfor er indifferent, hvilken variation man bruger til vores data. Ydermere kan vi konkluderer, at Accot og Zhai's formulering er bedst til at beskrive spiralopgave data. Til sidst kan vi konkluderer, at Welford's formulering klarer sig dårligst i at beskrive alle vores tre forskellige typer opgaver.
+Vi kan på baggrund af denne analyse konkludere, at Meyer's formulering beskriver vores data fra pegeopgaverne bedst, derudover konkluderer vi, at formuleringerne beskriver vores tunnelopgavedata lige godt og, at det derfor er indifferent, hvilken variation man bruger til vores data. Ydermere kan vi konkluderer, at Accot og Zhai's formulering er bedst til at beskrive spiralopgavedata. Til sidst kan vi konkludere, at Welford's formulering klarer sig dårligst i at beskrive alle vores tre forskellige typer opgaver.
 
 \addcontentsline{toc}{section}{Fremtidigt arbejde}
 \section*{Fremtidigt arbejde}
