ændringer i det hele

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -5,7 +5,7 @@ We present an analysis of a dataset acquired from an uncontrolled online user st
 
 \subsection*{\centering~Resumé}
 
-Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, understøttet af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyer's variation giver det bedste resultat, med en AIC-værdi i området fra 34.64 til 1781.96 mindre end de andre varianters. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Ved AIC-analyse finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af ​de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts' lov, finder vi ingen tegn på mønstre.
+Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, understøttet af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyer's variation giver det bedste resultat, med en AIC-værdi i området fra 34.64 til 1781.96 mindre end de andre varianters. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Ved AIC-analyse finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts' lov, finder vi ingen tegn på mønstre.
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
@@ -17,7 +17,7 @@ Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online 
 	\label{fig:primepixels}
 \end{wrapfigure}
 
-Inden for menneske-datamaskine interaktion er Fitt's Lov udbredt som optimerings- og forbedringsværktøj ved design af brugergrænseflader. Loven bruges til at udregne tiden det tager at flytte markøren til et element, ud fra elementets størrelse og afstanden til det. Som noteret i \cite{karafillis2012}, kan Fitts' Lov bruges som en retningslinje når man designer brugergrænseflader - f.eks. ved at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt, at have kendskab til "prime pixels", som er de pixels der ligger i kanten og hjørnerne af skærmen, som kan tilgås ved at flytte markøren til skærmens kant hvor markøren automatisk stopper som ses på figur \ref{fig:primepixels}. Derudover er markørens nuværende position også en "prime pixel" som f.eks. kan tilgås ved at højreklikke med musen. Den nemme tilgængelighed af disse pixels gør, at de ofte bliver integreret som centrale dele af brugergrænsefladedesign. Eksempler på dette ses overalt i interaktionen med moderne styresystemer, hvor størstedelen af dem benytter sig af markørens nuværende position til at vise en menu hvis brugeren højreklikker. Der er også en tendens til at styresystemers proceslinje bliver lagt langs øvre eller nedre kant af skærmen - igen på gund af den lette tilgængelighed af disse "prime pixels" for brugeren. Fleksibiliteten af Fitts' Lov ses ved den store variation af brugergrænseflader hvor den kan bruges, blandt andet i drop-down menuer, som beskrevet af \cite{accot1997}. Brugen af Fitt's Lov i drop-down menuer ses på figur \ref{fig:dropdown}, hvor det illustreres at der for hvert trin i menuen vil være en pegeopgave hvor Fitts' Lov kan benyttes.\\
+Inden for menneske-datamaskine interaktion er Fitt's Lov udbredt som optimerings- og forbedringsværktøj ved design af brugergrænseflader. Loven bruges til at udregne tiden det tager at flytte markøren til et element, ud fra elementets størrelse og afstanden til det. Som noteret i \cite{karafillis2012}, kan Fitts' Lov bruges som en retningslinje når man designer brugergrænseflader - f.eks. ved at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt at have kendskab til "prime pixels", som er de pixels, der ligger i kanten og hjørnerne af skærmen, og som kan tilgås ved at flytte markøren til skærmens kant, hvor markøren automatisk stopper som ses på figur \ref{fig:primepixels}. Derudover er markørens nuværende position også en "prime pixel" som f.eks. kan tilgås ved at højreklikke med musen. Den nemme tilgængelighed af disse pixels gør, at de ofte bliver integreret som centrale dele af brugergrænsefladedesign. Eksempler på dette ses overalt i interaktionen med moderne styresystemer, hvor størstedelen af dem benytter sig af markørens nuværende position til at vise en menu, hvis brugeren højreklikker. Der er også en tendens til at styresystemers proceslinje bliver lagt langs øvre eller nedre kant af skærmen - igen på gund af den lette tilgængelighed af disse "prime pixels" for brugeren. Fleksibiliteten af Fitts' Lov ses ved den store variation af brugergrænseflader, hvor den kan bruges, blandt andet i drop-down menuer, som beskrevet af \cite{accot1997}. Brugen af Fitt's Lov i drop-down menuer ses på figur \ref{fig:dropdown}, hvor det illustreres at der for hvert trin i menuen vil være en pegeopgave, hvor Fitts' Lov kan benyttes.\\
 
 \begin{wrapfigure}{l}{.35\linewidth}
 	\centering
@@ -26,9 +26,9 @@ Inden for menneske-datamaskine interaktion er Fitt's Lov udbredt som optimerings
 	\label{fig:dropdown}
 \end{wrapfigure}
 
-Siden lanceringen af den første successfulde smartphone i 2007, er der sket en stigning i antallet af enheder der har berøringsfølsomme skærme som den primære inputmetode. Med denne udvikling har der været et behov for, at udvikle nye måder at interagere med systemerne på. De tendenser til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme, da de tre største mobilstyresystemer i dag, nemlig Android, iOS og Windows Phone alle benytter sig af navigationselementer der ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications} som viser hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugerfladedesign hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer som bruges oftest. Med den stigende tendens til at skærmene på smartphones bliver størrere, vil der være et endnu større behov for at optimere brugerfladerne på disse enheder så de er hurtige at benytte sig af.\\
+Siden lanceringen af den første successfulde smartphone i 2007, er der sket en stigning i antallet af enheder, der har berøringsfølsomme skærme som den primære inputmetode. Med denne udvikling har der været et behov for at udvikle nye måder at interagere med systemerne på. De tendenser til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme, da de tre største mobilstyresystemer i dag, nemlig Android, iOS og Windows Phone alle benytter sig af navigationselementer, der ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications}, som viser, hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugerfladedesign, hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer, der bruges oftest. Med den stigende tendens til at skærmene på smartphones bliver størrere, vil der være et endnu større behov for at optimere brugerfladerne på disse enheder, så de er hurtige at benytte sig af.\\
 
-Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfølsomme skærme, så er der dog stadig behov for mere dokumentation af at denne rent faktisk kan benyttes til touch-input. Der er i løbet af de sidste to år publiceret et antal artikler om Fitts' Lov, hvor forskere er begyndt at se på, om den også kan bruges til berøringsfølsomme skærme eller øjebevægelser \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessante områder at bruge Fitt's Lov på, så er der stadig et stort behov for mere dokumentation, om hvorvidt Fitt's Lov, eller en af varianterne af den, rent faktisk kan benyttes til disse inputmetoder. Der danner sig dog et generelt billede af hvordan Fitt's Lov stadig kan være interessant at skrive om, og forske i, i dag - selvom den blev introduceret i 1954.\\
+Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfølsomme skærme, er der dog stadig behov for mere dokumentation af at denne rent faktisk kan benyttes til touch-input. Der er i løbet af de sidste to år publiceret et antal artikler om Fitts' Lov, hvor forskere er begyndt at se på, om den også kan bruges til berøringsfølsomme skærme eller øjebevægelser \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessante områder at bruge Fitt's Lov på, er der stadig et stort behov for mere dokumentation, om hvorvidt Fitt's Lov, eller en af varianterne af den, rent faktisk kan benyttes til disse inputmetoder. Der danner sig dog et generelt billede af, hvordan Fitt's Lov stadig kan være interessant at skrive om, og forske i, i dag - selvom den blev introduceret i 1954.\\
 
 \begin{wrapfigure}{r}{.35\linewidth}
 	\centering
@@ -37,15 +37,15 @@ Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfø
 	\label{fig:notifications}
 \end{wrapfigure}
 
-Siden udgivelsen af Fitts' originale artikel der beskrev hans forsøg, og udledte formel deraf, har flere andre udgivelser foreslået ændringer, som kunne forbedre Fitts' Lov. Den første udgivelse som ville ændre Fitts' Lov var \cite{welford1968}, hvor Alan T. Welford foreslog nogle ændringer til Fitts' Lov, ud fra sine observationer af Fitts' indsamlede data. Både Fitts og Welford beskrev formuleringerne ud fra et rent menneskeligt motorisk synspunkt, men i slutningen af 70'erne begyndte menneske-datamaskine interaktionsforskere at interessere sig for emnet, blandt andet med udgivelsen af \cite{card1978}. Siden da foreslog David E. Meyer af to omgange, \cite{meyer1988} \& \cite{meyer1990}, nogle fundamentale ændringer til den bagvedliggende model for Fitts' Lov. Dette førte til en variant af Fitts' Lov, hvor sværhedsgraden var beskrevet ud fra en kvadratrod og ikke en logaritmisk funktion. Meyer lavede først en række beregninger på data fra Fitts' forsøg, hvilket viste at hans formulering passede bedre på den indsamlede data. Herefter lavede han nogle forsøg, hvor testpersoner lavede simple håndledsbevægelser. Disse viste igen, at den nye variant passede bedre til den indsamlede data.
+Siden udgivelsen af Fitts' originale artikel, der beskrev hans forsøg, og udledte formel deraf, har flere andre udgivelser foreslået ændringer, som kunne forbedre Fitts' Lov. Den første udgivelse som ville ændre Fitts' Lov var \cite{welford1968}, hvor Alan T. Welford foreslog nogle ændringer til Fitts' Lov, ud fra sine observationer af Fitts' indsamlede data. Både Fitts og Welford beskrev formuleringerne ud fra et rent menneskeligt motorisk synspunkt, men i slutningen af 70'erne begyndte menneske-datamaskine interaktionsforskere at interessere sig for emnet, blandt andet med udgivelsen af \cite{card1978}. Siden da foreslog David E. Meyer af to omgange, \cite{meyer1988} \& \cite{meyer1990}, nogle fundamentale ændringer til den bagvedliggende model for Fitts' Lov. Dette førte til en variant af Fitts' Lov, hvor sværhedsgraden var beskrevet ud fra en kvadratrod og ikke en logaritmisk funktion. Meyer lavede først en række beregninger på data fra Fitts' forsøg, hvilket viste at hans formulering passede bedre på den indsamlede data. Herefter lavede han nogle forsøg, hvor testpersoner lavede simple håndledsbevægelser. Disse viste igen, at den nye variant passede bedre til den indsamlede data.
 
-I 1992 udgav Scott MacKenzie artiklen \cite{mackenzie1992}, hvori han beskrev en ny variant af Fitts' Lov. Denne variant udviser samme form som Shannon's Sætning \cite{goldberg2015} og er siden blevet accepteret som den mest udbredte \cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af, at MacKenzie viste at hans formulering passede bedst på data fra tidligere forsøg, så har både \cite{drewes2010} og \cite{goldberg2015} vist at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af opgavers sværhedsgrader. Specielt noterede \cite{goldberg2015} at det kom an på sværhedsgraden, hvilken formulering der skulle bruges. MacKenzies var bedst at bruge ved opgaver med høje sværhedsgrader, mens Meyers viste sig at være bedst anvendelig ved opgaver med lave sværhedsgrader.
+I 1992 udgav Scott MacKenzie artiklen \cite{mackenzie1992}, hvori han beskrev en ny variant af Fitts' Lov. Denne variant udviser samme form som Shannon's Sætning \cite{goldberg2015} og er siden blevet accepteret som den mest udbredte \cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af, at MacKenzie viste, at hans formulering passede bedst på data fra tidligere forsøg, har både \cite{drewes2010} og \cite{goldberg2015} vist, at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af opgavers sværhedsgrader. Specielt noterede \cite{goldberg2015}, at det kom an på sværhedsgraden, hvilken formulering der skulle bruges. MacKenzies var bedst at bruge ved opgaver med høje sværhedsgrader, mens Meyers viste sig at være bedst anvendelig ved opgaver med lave sværhedsgrader.
 
-På trods af at MacKenzie's variant er den mest udbredte, så står det ofte forskere frit for at bruge den variant de finder bedst passende\cite{drewes2010}. Der bliver i forskellige artikler gjort brug af den variant af Fitts' lov som passer den indsamlede data bedst. Dette fører til at forskere skal retfærdiggøre deres valg af Fitts' lov, fremfor at bruge tiden på deres egentlige forskningsområde\cite{drewes2010}. Der er behov for en standardmodel af Fitts' lov, da det vil gøre det nemmere for både forskere, undervisere og studerende inden for menneske-datamaskine interaktion. Forskere, fordi de ikke skal bruge tid på at validere og retfærdiggøre deres valg af Fitts' Lov. Undervisere, fordi de kan undervise i Fitts' lov uden at være usikre på hvad der er rigtigt. Studerende, fordi det vil give dem mulighed for at studere området mere dybdegående.
+På trods af at MacKenzie's variant er den mest udbredte, står det ofte forskere frit for at bruge den variant de finder bedst passende\cite{drewes2010}. Der bliver i forskellige artikler gjort brug af den variant af Fitts' lov, som passer den indsamlede data bedst. Dette fører til at forskere skal retfærdiggøre deres valg af Fitts' lov, fremfor at bruge tiden på deres egentlige forskningsområde\cite{drewes2010}. Der er behov for en standardmodel af Fitts' lov, da det vil gøre det nemmere for både forskere, undervisere og studerende inden for menneske-datamaskine interaktion. Forskere, fordi de ikke skal bruge tid på at validere og retfærdiggøre deres valg af Fitts' Lov. Undervisere, fordi de kan undervise i Fitts' lov uden at være usikre på, hvad der er rigtigt. Studerende, fordi det vil give dem mulighed for at studere området mere dybdegående.
 
-Det er generelt, inden for videnskabelige felter, vigtigt at reproducere og dokumentere tidligere udførte forsøg, da det hjælper med at se om et resultat kan genfindes og beskrive hvor resultaterne holder og fejler. Det hjælper også med at fjerne studier, hvor resultaterne ikke kan valideres både under ens og lidt anderledes forhold\cite{hornbaek2014}. Det har inden for menneske-datamaskine interaktion i høj grad været normalt ikke at udføre genskabelse af forsøg. \cite{hornbaek2014} beskriver at kun $3\%$ af 891 artikler fra forskellige publikationer reproducerer tidligere eksperimenter. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion, hvilket Fitts' lov i høj grad kan siges at være.
+Det er generelt, inden for videnskabelige felter, vigtigt at reproducere og dokumentere tidligere udførte forsøg, da det hjælper med at se om et resultat kan genfindes og beskrive, hvor resultaterne holder vs. fejler. Det hjælper også med at fjerne studier, hvor resultaterne ikke kan valideres både under ens og lidt anderledes forhold\cite{hornbaek2014}. Det har inden for menneske-datamaskine interaktion i høj grad været normalt ikke at udføre genskabelse af forsøg. \cite{hornbaek2014} beskriver at kun $3\%$ af 891 artikler fra forskellige publikationer reproducerer tidligere eksperimenter. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion, hvilket Fitts' lov i høj grad kan siges at være.
 
-Vi vil i denne rapport udføre to forsøg hvis formål er at indsamle og analysere data for bevægelser, for at sammenligne forskellige varianter af Fitts' lov. Vores forsøg vil være en genskabelse af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre en kontrolleret indsamling af data, som derved kan vise om vi også kan benytte data indsamlet fra vores onlineeksperiment. Vi vil i vores analyse både analysere dataen i forhold til de fire allerede omtalte variationer af Fitts' lov. Dertil vil vi analysere bevægelsesbaner, fart og hastighed, for at se om Fitts' lov kan optimeres.\\
+Vi vil i denne rapport udføre to forsøg, hvis formål er at indsamle og analysere data for bevægelser, for at sammenligne forskellige varianter af Fitts' lov. Vores forsøg vil være en genskabelse af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre en kontrolleret indsamling af data, som derved kan vise om vi også kan benytte data indsamlet fra vores onlineeksperiment. Vi vil i vores analyse både analysere dataen i forhold til de fire allerede omtalte variationer af Fitts' lov. Dertil vil vi analysere bevægelsesbaner, fart og hastighed, for at se om Fitts' lov kan optimeres.\\
 
 \addcontentsline{toc}{section}{Forventninger til læseren}
 \section*{Forventninger til læseren}
@@ -53,7 +53,7 @@ Der stilles forventinger til læseren om indledende universitets matematik, ekse
 
 \addcontentsline{toc}{chapter}{Teori}
 \chapter*{Teori}
-I dette kapitel vil vi kigge nærmere på teorierne bag Fitts' lov. Vi vil først give en opsummering af Fitts' egne tanker, hvorefter vi beskriver tre alternative formulering af Fitts' lov.
+I dette kapitel vil vi kigge nærmere på teorierne bag Fitts' lov. Vi vil først give en opsummering af Fitts' egne tanker, hvorefter vi beskriver tre alternative formuleringer af Fitts' lov.
 
 \addcontentsline{toc}{section}{Fitts' tre eksperimenter}
 \section*{Fitts' tre eksperimenter}
@@ -73,7 +73,7 @@ Testdeltagerne, 16 højrehåndede mandlige universitetsstuderende, fik 15 sekund
 
 \addcontentsline{toc}{subsection}{Eksperiment 2}
 \subsection*{Eksperiment 2: \textit{Disc Transfer}}
-I dette eksperiment brugte Fitts to pinde, og otte runde plader. De otte runde plader havde et hul i midten, som kunne antage fire forskellige størrelser - dog havde alle otte plader den samme hulstørrelse, i hver enkel opgave. De to pinde kunne ligesom i eksperiment 1 være placeret med fire forskellige afstande imellem sig. 
+I dette eksperiment brugte Fitts to pinde, og otte runde plader. De otte runde plader havde et hul i midten, som kunne antage fire forskellige størrelser - dog havde alle otte plader den samme hulstørrelse, i hver enkel opgave. De to pinde skulle ligesom i eksperiment 1 være placeret med fire forskellige afstande imellem sig. 
 
 Hver af de 16 forsøgsmuligheder blev i tilfældig rækkefølge udført af 16 højrehåndede mandlige universitetsstuderende. Figur \ref{fig:FittsEx2} viser, hvordan eksperimentet blev udført.
 
